<resources>
    <string name="app_name">Your Tasks</string>
    <string name="caption_login">Login</string>
    <string name="message_create_user">Not a user ? Click here to create...</string>
    <string name="hint_email">email</string>
    <string name="hint_password">password</string>
    <string name="hint_userpassword">user password</string>
    <string name="message_logerror">Login failed.</string>
    <string name="message_user_logerror">User don\'t exists.</string>
    <string name="title_activity_user_list">UserListActivity</string>
    <string name="title_activity_user_edit">UserEditActivity</string>
    <string name="title_activity_user_view">UserViewActivity</string>

    <!-- Nav Drawer Menu Items -->
    <!--string-array name="nav_drawer_items">
        <item >Home</item>
        <item >Find People</item>
        <item >Photos</item>
        <item >Communities</item>
        <item >Pages</item>
        <item >What\'s Hot</item>
    </string-array-->

    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <!--array name="nav_drawer_icons">
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_people</item>
        <item>@drawable/ic_photos</item>
        <item>@drawable/ic_communities</item>
        <item>@drawable/ic_pages</item>
        <item>@drawable/ic_whats_hot</item>
    </array-->

</resources>
